--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
   },
   "dependencies": {
     "bootstrap": "4.3.1",
+    "esri-leaflet-geocoder": "^2.3.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.12.5",
     "react": "^17",
-    "react-dom": "^17"
+    "react-dom": "^17",
+    "react-leaflet": "^3.0.2",
+    "react-table": "^7.6.2"
   }
 }
