--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "4.3.1",
     "esri-leaflet-geocoder": "^2.3.3",
     "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "popper.js": "^1.12.5",
     "react": "^17",
     "react-dom": "^17",
