--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
     "babel-preset-react": "^7.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.2.1",
     "file-loader": "^4.2.0",
