--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.17",
     "bootstrap": "4.3.1",
     "esri-leaflet-geocoder": "^2.3.3",
     "jquery": "^3.5.1",
