--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,40 @@
 appdirs==1.4.4
-asgiref==3.2.10
-astroid==2.4.2
+backcall==0.1.0
 beautifulsoup4==4.9.3
-certifi==2020.6.20
-chardet==3.0.4
-colorama==0.4.4
+certifi==2020.12.5
+chardet==4.0.0
+decorator==4.4.0
 distlib==0.3.1
-Django==3.1.2
+Django==2.2.4
+django-crispy-forms==1.7.2
+django-extensions==2.2.1
+django-group-by==0.3.1
+django-webpack-loader==0.6.0
+djangorestframework==3.10.2
 filelock==3.0.12
 idna==2.10
-isort==5.6.4
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-pipenv==2020.8.13
-pylint==2.6.0
-pytz==2020.1
-requests==2.24.0
-six==1.15.0
-soupsieve==2.0.1
-sqlparse==0.4.1
-toml==0.10.2
-urllib3==1.25.11
-virtualenv==20.0.34
+importlib-metadata==3.3.0
+ipdb==0.12.2
+ipython==7.7.0
+ipython-genutils==0.2.0
+jedi==0.15.1
+parso==0.5.1
+pickleshare==0.7.5
+pipenv==2020.11.15
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+Pygments==2.4.2
+pytz==2019.2
+requests==2.25.1
+rope==0.18.0
+six==1.12.0
+soupsieve==2.1
+sqlparse==0.3.0
+traitlets==4.3.2
+typing-extensions==3.7.4.3
+urllib3==1.26.2
+virtualenv==20.2.2
 virtualenv-clone==0.5.4
-wrapt==1.12.1
+wcwidth==0.1.7
+Werkzeug==0.15.5
+zipp==3.4.0
